[gd_scene load_steps=6 format=3 uid="uid://6dybykqnfrcc"]

[ext_resource type="Script" uid="uid://cima46qgwhh2d" path="res://Scripts/pausa.gd" id="1_vk2cv"]
[ext_resource type="FontFile" uid="uid://dkkt3xoq4ajcs" path="res://Assets/Fonts/kiwisoda/KiwiSoda.ttf" id="2_8wxh3"]
[ext_resource type="StyleBox" uid="uid://bjt6gkg304f4g" path="res://Themes/botn_pressed_2.tres" id="3_08lhq"]
[ext_resource type="StyleBox" uid="uid://bmry14qr4plox" path="res://Themes/pausa.tres" id="4_xt4ld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt4ld"]
bg_color = Color(0.41598, 0.41598, 0.41598, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.711279, 0.00830147, 0.00988317, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Pausa" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vk2cv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 64

[node name="Titulo" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.894118, 0, 0, 1)
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("2_8wxh3")
theme_override_font_sizes/font_size = 100
text = "Pausa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continuar" type="Button" parent="GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Salir")
focus_neighbor_bottom = NodePath("../Opciones")
theme_override_styles/focus = ExtResource("3_08lhq")
theme_override_styles/hover = ExtResource("3_08lhq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xt4ld")
theme_override_styles/normal = ExtResource("4_xt4ld")
text = "Continuar"

[node name="Opciones" type="Button" parent="GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Continuar")
focus_neighbor_bottom = NodePath("../Salir")
theme_override_styles/focus = ExtResource("3_08lhq")
theme_override_styles/hover = ExtResource("3_08lhq")
theme_override_styles/pressed = ExtResource("3_08lhq")
theme_override_styles/normal = ExtResource("4_xt4ld")
text = "Opciones"

[node name="Salir" type="Button" parent="GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Opciones")
focus_neighbor_bottom = NodePath("../Continuar")
theme_override_styles/focus = ExtResource("3_08lhq")
theme_override_styles/hover = ExtResource("3_08lhq")
theme_override_styles/pressed = ExtResource("3_08lhq")
theme_override_styles/normal = ExtResource("4_xt4ld")
text = "Salir"

[node name="Window" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(700, 200)
visible = false

[node name="ColorRect" type="ColorRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="MarginContainer" type="MarginContainer" parent="Window/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Window/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Label" type="Label" parent="Window/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "¿Seguro que quieres salir al menú principal?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Window/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60
alignment = 1

[node name="Si" type="Button" parent="Window/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../No")
focus_neighbor_right = NodePath("../No")
theme_override_font_sizes/font_size = 24
text = "Sí"

[node name="No" type="Button" parent="Window/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Si")
focus_neighbor_right = NodePath("../Si")
theme_override_font_sizes/font_size = 24
text = "No"

[connection signal="pressed" from="GridContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="GridContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="GridContainer/Salir" to="." method="_on_salir_pressed"]
[connection signal="window_input" from="Window" to="." method="_on_confirmacion_salir_window_input"]
[connection signal="pressed" from="Window/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Si" to="." method="_on_si_pressed"]
[connection signal="pressed" from="Window/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
